[metadata]
name = requests-mock
author = Jamie Lennox
author-email = jamielennox@gmail.com
summary = Mock out responses from the requests package
description-file = README.rst
license = Apache-2
license-file = LICENSE
home-page = https://requests-mock.readthedocs.org/
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
test_suite = tests

[files]
packages = requests_mock

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[bdist_wheel]
universal = 1

[extras]
fixture =
  fixtures
