[metadata]
name = requests-mock
author = Jamie Lennox
author_email = jamielennox@gmail.com
summary = Mock out responses from the requests package
description_file = README.rst
license = Apache-2
license_file = LICENSE
home_page = https://requests-mock.readthedocs.io/
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
test_suite = tests

[files]
packages = requests_mock
package-data = requests_mock = py.typed, *.pyi

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[bdist_wheel]
universal = 1

[extras]
fixture =
  fixtures

[entry_points]
pytest11 =
    requests_mock = requests_mock.contrib._pytest_plugin
