[metadata]
name = requests-mock
author = Jamie Lennox
author_email = jamielennox@gmail.com
description = Mock out responses from the requests package
long_description = file:README.rst
license = Apache-2
url = https://requests-mock.readthedocs.io/
project_urls =
    Source = https://github.com/jamielennox/requests-mock
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing

[options]
packages = requests_mock
include_package_data = true
install_requires =
    requests>=2.22,<3
    six

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[bdist_wheel]
universal = 1

[options.extras_require]
fixture =
  fixtures

[options.entry_points]
pytest11 =
    requests_mock = requests_mock.contrib._pytest_plugin

[mypy]
[mypy-fixtures]
ignore_missing_imports = True
